[tool.poetry]
name = "nba-metrics"
version = "0.1.0"
description = "Custom performance metrics for NBA draft ML project"
authors = ["Mohammed Amaan Shaikh amaans751@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nba_metrics" }]

[tool.poetry.dependencies]
python = "3.11.4"
numpy = "*"
pandas = "2.2.2"
scikit-learn = "1.5.1"
joblib = "1.4.2"
xgboost = "2.1.0"
hyperopt = "0.2.7"
lightgbm = "4.4.0"
lime = "0.2.0.1"
wandb = "0.17.4"

[tool.poetry.group.dev.dependencies]
build = "*"
twine = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
readme = "README.md"
requires-python = "3.11.4"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
