[tool.poetry]
name = "nba-metrics"
version = "0.2.3"
description = "Metrics and utilities for NBA (AT1) + Weather ML (AT2)"
authors = ["Mohammed Amaan Shaikh amaans751@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nba_metrics" }]

[tool.poetry.dependencies]
python = "3.11.4"
numpy = "*"
pandas = "2.2.2"
scikit-learn = "1.5.1"
joblib = "1.4.2"
xgboost = "2.1.0"
hyperopt = "0.2.7"
lightgbm = "4.4.0"
lime = "0.2.0.1"
wandb = "0.17.4"
httpx = "0.27.0"

[tool.poetry.group.dev.dependencies]
build = "*"
twine = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
